made cards and add styles

--- a/src/components/Footer/Style.module.scss
+++ b/src/components/Footer/Style.module.scss
@@ -1,5 +1,5 @@
 footer{
-    background-color: yellow;
+    background-color:  rgb(250, 217, 0);
     display: flex;
     justify-content: space-around;
     padding: 31px;
