--- a/src/components/HomePage/Header/styles.module.scss
+++ b/src/components/HomePage/Header/styles.module.scss
@@ -55,3 +55,10 @@
     .logo{
     font-size: 4rem;
 }
+
+.UserProfile{
+     &:hover{
+        border:3px solid greenyellow;
+        border-radius: 2rem;
+     }
+}
