--- a/src/components/Authorisation/SignIn/styles.module.scss
+++ b/src/components/Authorisation/SignIn/styles.module.scss
@@ -1,12 +1,18 @@
 .signInPage{
     background-color: rgba(248, 248, 248, 0.845);
-    
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 
-.form{justify-content: center;
+.form{
+    justify-content: center;
     display: flex;
     flex-direction: column;
-    width: 23rem;
+    width: 23rem;   
+     margin: -4rem 0 1rem 8rem;
 }
 
 .signInBtn{
