--- a/src/components/HomePage/Header/styles.module.scss
+++ b/src/components/HomePage/Header/styles.module.scss
@@ -23,6 +23,11 @@
     content: "\f004";
     margin-right: 1.5rem;
     font-size: 2rem;
+
+    &:hover{
+        color: chocolate;
+        font-size: 2.2rem;
+    }
 }
 .searchInput{
     font-size: 2rem;
@@ -65,7 +70,8 @@
 
 .UserProfile{
      &:hover{
-        border:3px solid greenyellow;
-        border-radius: 2rem;
+        position: absolute;
+        top: 46px;
+        right: 15rem;
      }
 }
