--- a/src/components/HomePage/Main/styles.module.scss
+++ b/src/components/HomePage/Main/styles.module.scss
@@ -25,6 +25,7 @@
 .price{
     font-size: 1.3rem;
     font-weight: 700;
+    margin:2.5rem 0 0 0;
 }
 .containerPaddings{
     padding: 3rem;
@@ -71,7 +72,7 @@
 }
 
 .weight{
-    margin: -1rem 0 0 0;
+    margin: 0;
 }
 
 .productName{
