--- a/src/components/HomePage/Main/styles.module.scss
+++ b/src/components/HomePage/Main/styles.module.scss
@@ -43,15 +43,6 @@
     object-fit: contain     
 }
 
-.heartStyleForFavourite{
-    position: absolute;
-    font-size: 2.3rem;
-    opacity: 0.4;
-    top: -0.1rem;
-    right: 0.3rem;
-    border: none;
-}
-
 .discountPrice{
     background-color: red;
     color:white;
@@ -136,4 +127,8 @@
     font-size: 1.2rem;
     font-weight: 700;
     margin-left: -3rem;
+}
+
+.like{
+    color:red;
 }
