add likes function and component

--- a/src/components/HomePage/Header/styles.module.scss
+++ b/src/components/HomePage/Header/styles.module.scss
@@ -45,6 +45,11 @@
     padding: 2rem;
     text-align: center; 
     border: none;
+
+    &:focus {
+        outline: 0;
+        outline-offset: 0;
+    }   
 }
 
 .cross{
