--- a/src/components/HomePage/Main/styles.module.scss
+++ b/src/components/HomePage/Main/styles.module.scss
@@ -4,7 +4,8 @@
     margin: 0.7rem;
     &:hover{
         border: 0.1rem solid #f9e100c7;
-        box-sizing: border-box;
+        outline: 0;
+        outline-offset: 0;
     }
 }
 
