--- a/src/components/HomePage/Header/styles.module.scss
+++ b/src/components/HomePage/Header/styles.module.scss
@@ -84,5 +84,14 @@
         top: 46px;
         right: 15rem;
      }
-
 }
+.basketCountOfProducts{
+    position: absolute;
+    right: 13rem;
+    top: 2rem;
+    background-color: red;
+    border-radius: 50%;
+    width: 1.5rem;
+    display: flex;
+    justify-content: center;
+ }
