--- a/src/components/Basket/styles.module.scss
+++ b/src/components/Basket/styles.module.scss
@@ -4,3 +4,37 @@
     flex-direction: column;
     align-items: center;
 }
+
+.btnBackToHome{
+    display: flex;
+    justify-content: center;
+    margin: 0.2rem;
+    flex-direction: row;
+    background-color: rgba(249, 225, 0, 0.7803921569);
+    color: black;
+    border-radius: 2rem;
+    font-size: 16px;
+    font-weight: 700;
+    border: none; 
+}
+
+
+
+//Товары есть в корзине
+
+.basketStyle{
+    background-color: rgb(211 208 208);
+    height: 100%;
+}
+
+.cardInBasket{
+    background-color: #fff;
+    margin: 1rem 12rem 1rem 11rem;
+    padding: 1rem;
+}
+
+.priceCount{
+    margin-left: 6rem;
+    position: relative;
+    top: -2.6rem;
+}
