--- a/src/components/Basket/ProductInBasket/styles.module.scss
+++ b/src/components/Basket/ProductInBasket/styles.module.scss
@@ -9,7 +9,6 @@
 .priceCount{
     margin-left: 6rem;
     position: relative;
-    top: -2.6rem;
     display: flex;
     justify-content: space-between;
     max-width: 34rem;
@@ -21,19 +20,26 @@
     align-items: baseline;
     border: 2px solid black;
     border-radius: 17%;
-    width: 5rem;
+    width: 6rem;
     background-color: blanchedalmond;
     font-size: 1.2rem;
     
 }
 
 .incrProd{
+    border: none;
+    border-radius:15%;
+    background-color: blanchedalmond;
+
     &:hover{
         background-color:rgb(201, 198, 193)
     }
 }
 
 .decrProd{
+    border: none;
+    border-radius:15%;
+    background-color: blanchedalmond;
 
     &:hover{
         background-color:rgb(201, 198, 193)
