--- a/src/components/Basket/styles.module.scss
+++ b/src/components/Basket/styles.module.scss
@@ -24,5 +24,6 @@
 
 .basketStyle{
     background-color: rgb(211 208 208);
+    // background-color: rgba(249, 225, 0, 0.7803921569);
     height: 100%;
 }
