--- a/src/components/Basket/styles.module.scss
+++ b/src/components/Basket/styles.module.scss
@@ -25,5 +25,10 @@
 .basketStyle{
     background-color: rgb(211 208 208);
     // background-color: rgba(249, 225, 0, 0.7803921569);
-    height: 100%;
+    // height: 100%;
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
 }
