--- a/src/components/HomePage/Footer/Stocks/styles.module.scss
+++ b/src/components/HomePage/Footer/Stocks/styles.module.scss
@@ -1,139 +1,138 @@
-.divCard{
-    width: 18rem;
-    border:none;
-    margin: 0.7rem;
-    &:hover{
-        border: 0.1rem solid #f9e100c7;
-    }
+.divCard {
+  width: 18rem;
+  border: none;
+  margin: 0.7rem;
+  &:hover {
+    border: 0.1rem solid #f9e100c7;
+  }
 }
 
-.containerForCards{
-    padding: 3rem;
+.containerForCards {
+  padding: 3rem;
 }
 
-.btnStyle{
+.btnStyle {
+  background-color: #f9e100c7;
+  color: black;
+  border-radius: 2rem;
+  font-size: 16px;
+  font-weight: 700;
+  border: none;
+  position: absolute;
+  bottom: 1rem;
+  left: 1.3rem;
+
+  &:hover {
+    transition: none;
+    border: 0.1rem solid black;
     background-color: #f9e100c7;
-    color: black;
-    border-radius: 2rem;
-    font-size: 16px;
-    font-weight: 700;
-    border: none;
-    position: absolute;
-    bottom: 1rem;
-    left: 1.3rem;
-
-    &:hover{
-        transition: none;
-        border: 0.1rem solid black;
-        background-color: #f9e100c7;
-    }
+  }
 }
-.price{
-    font-size: 1.3rem;
-    font-weight: 700;
-    margin:2.5rem 0 0 0;
+.price {
+  font-size: 1.3rem;
+  font-weight: 700;
+  margin: 2.5rem 0 0 0;
 }
-.containerPaddings{
-    padding: 3rem;
+.containerPaddings {
+  padding: 3rem;
 }
 
-.cardImg{
-    padding: 1.5rem;
-    height: 14rem;
-    object-fit: contain     
+.cardImg {
+  padding: 1.5rem;
+  height: 14rem;
+  object-fit: contain;
 }
 
-.heartStyleForFavourite{
-    position: absolute;
-    font-size: 2.3rem;
-    opacity: 0.4;
-    top: -0.1rem;
-    right: 0.3rem;
-    border: none;
+.heartStyleForFavourite {
+  position: absolute;
+  font-size: 2.3rem;
+  opacity: 0.4;
+  top: -0.1rem;
+  right: 0.3rem;
+  border: none;
 }
 
-.discountPrice{
-    background-color: red;
-    color:white;
-    width: 4rem;
-    border-radius: 1rem;
-    text-align: center;
-    margin: 0rem -0.8rem;
-    border:none;
-    font-weight:bold;
+.discountPrice {
+  background-color: red;
+  color: white;
+  width: 4rem;
+  border-radius: 1rem;
+  text-align: center;
+  margin: 0rem -0.8rem;
+  border: none;
+  font-weight: bold;
 }
 
-.newProduct{
-    background-color:#64a3ff;
-    color:azure;    
-    width: 6rem;
-    border-radius: 1rem;
-    text-align: center;
-    margin: 0rem -0.8rem;
-    border:none;
-    font-weight: 600;
-    position: absolute;
-    left: 4.8rem;
-    font-size: 1.1rem;
+.newProduct {
+  background-color: #64a3ff;
+  color: azure;
+  width: 6rem;
+  border-radius: 1rem;
+  text-align: center;
+  margin: 0rem -0.8rem;
+  border: none;
+  font-weight: 600;
+  position: absolute;
+  left: 4.8rem;
+  font-size: 1.1rem;
 }
 
-.weight{
-    margin: 0;
+.weight {
+  margin: 0;
 }
 
-.productName{
-    margin: 0px 0 1.5rem 0;
+.productName {
+  margin: 0px 0 1.5rem 0;
 }
 
-.oldPrice{
-    text-decoration: line-through;
-    font-size: 0.8rem;
-    color:black;
+.oldPrice {
+  text-decoration: line-through;
+  font-size: 0.8rem;
+  color: black;
 }
 
-.discPrice{
-    color:red;
-    font-weight:bold;
-    font-size: 1.3rem;
+.discPrice {
+  color: red;
+  font-weight: bold;
+  font-size: 1.3rem;
 }
-
 
 // Товары не найдены
-.searchResult{
-    height: 22rem;
-    width: 100%;
+.searchResult {
+  height: 22rem;
+  width: 100%;
 }
 
-.leftSideSearchResult{
-    font-size: 1.5rem;
+.leftSideSearchResult {
+  font-size: 1.5rem;
 }
-.searchValueText{
-    font-weight: 800;
+.searchValueText {
+  font-weight: 800;
 }
-.centerSide{
-    margin-left:33rem ;
+.centerSide {
+  margin-left: 33rem;
 }
-.btnGoToHomepage{
-    background-color: #f9e100c7;
-    color: black;
-    border-radius: 2rem;
-    font-size: 16px;
-    font-weight: 700;
-    border: none;
-    position: relative;
-    left: 10%;  
-}
-
-.sadSticker{
-    font-size: 8rem;
-    opacity: 50%;
-    position: relative;
-    left: 10%;
-    margin-bottom: 2rem;
+.btnGoToHomepage {
+  background-color: #f9e100c7;
+  color: black;
+  border-radius: 2rem;
+  font-size: 16px;
+  font-weight: 700;
+  border: none;
+  position: relative;
+  left: 10%;
 }
 
-.searchResultText{
-    font-size: 1.2rem;
-    font-weight: 700;
-    margin-left: -3rem;
+.sadSticker {
+  font-size: 8rem;
+  opacity: 50%;
+  position: relative;
+  left: 10%;
+  margin-bottom: 2rem;
+}
+
+.searchResultText {
+  font-size: 1.2rem;
+  font-weight: 700;
+  margin-left: -3rem;
 }
