--- a/src/components/HomePage/Main/styles.module.scss
+++ b/src/components/HomePage/Main/styles.module.scss
@@ -1,6 +1,6 @@
 .divCard {
   width: 18rem;
-  border: none;
+  border:0.1rem solid #fff;
   margin: 0.7rem;
   &:hover {
     border: 0.1rem solid #f9e100c7;
