--- a/src/components/Basket/styles.module.scss
+++ b/src/components/Basket/styles.module.scss
@@ -21,12 +21,22 @@
 //Товары есть в корзине
 
 .basketStyle {
-  background-color: rgb(211 208 208);
-  // background-color: rgba(249, 225, 0, 0.7803921569);
-  // height: 100%;
+
   position: absolute;
   top: 0px;
   right: 0px;
   bottom: 0px;
   left: 0px;
+}
+
+.totalprice{
+  position: fixed;
+  top: 9rem;
+  right: 14rem;
+  width: 15rem;
+  background: rgb(220, 204, 204);
+  border-radius: 1rem;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
 }
