add function of edit profile,also some styles

--- a/src/components/UserProfile/styles.module.scss
+++ b/src/components/UserProfile/styles.module.scss
@@ -6,3 +6,15 @@
 .user_profile {
   margin: 1rem 2rem;
 }
+
+.modal{
+    display: none;
+    max-width: 30rem;
+    position: absolute;
+    top: 10rem;
+    right: 41rem;
+}
+
+.active{
+  display: block;
+}
