--- a/src/components/Basket/ProductInBasket/styles.module.scss
+++ b/src/components/Basket/ProductInBasket/styles.module.scss
@@ -4,11 +4,11 @@
   background-color: rgb(220, 204, 204);
   margin: 1rem 30rem 1rem 2rem;
   padding: 1rem;
-  border-radius:1.1rem
+  border-radius: 1.1rem;
 }
 
-.imgInBasket{
-  height: 5em; 
+.imgInBasket {
+  height: 5em;
 }
 
 .priceCount {
@@ -56,14 +56,10 @@
   }
 }
 
-
-.discountPrice{
+.discountPrice {
   text-decoration: line-through;
-
-
 }
 
-.price{
-  color:black
-
+.price {
+  color: black;
 }
