--- a/src/components/HomePage/Main/DetailedProductCard/styles.module.scss
+++ b/src/components/HomePage/Main/DetailedProductCard/styles.module.scss
@@ -1,7 +1,7 @@
 .divCard {
   width: 18rem;
   border: 0.1rem solid #fff;
-  margin: 0.7rem;
+  margin: 0.7rem 0 0 10rem;
   &:hover {
     border: 0.1rem solid #f9e100c7;
     outline: 0;
@@ -22,8 +22,8 @@
   border: none;
   position: absolute;
   bottom: 1rem;
-  left: 1.3rem;
-
+  left: 0.2rem;
+  width: 17rem;
   &:hover {
     transition: none;
     border: 0.1rem solid black;
@@ -51,7 +51,7 @@
   width: 4rem;
   border-radius: 1rem;
   text-align: center;
-  margin: 0rem -0.8rem;
+  margin: 0rem 0.2rem;
   border: none;
   font-weight: bold;
 }
@@ -88,6 +88,13 @@
   color: red;
   font-weight: bold;
   font-size: 1.3rem;
+}
+
+.comments {
+  position: absolute;
+  top: 1rem;
+  left: 18rem;
+  width: 36rem;
 }
 
 // Товары не найдены
