--- a/src/components/HomePage/Main/DetailedProductCard/ModalForComment/styles.module.scss
+++ b/src/components/HomePage/Main/DetailedProductCard/ModalForComment/styles.module.scss
@@ -11,3 +11,41 @@
   width: 17rem;
   height: 3rem;
 }
+
+.modal{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 10rem;
+  position: fixed;
+  background-color: gray;
+  width: 100vw;
+  height: 100vh;
+  opacity: 0.9;
+  right: 0;
+  left: 0;
+
+
+  input{
+    width: 32rem;
+    border: none;
+    border-radius: 1rem;
+    height: 3rem;
+    font-size: 1.5rem;
+    position: relative;
+    top: 10rem;
+  }
+
+    button{
+      background-color: orange;
+      color: black;
+      border-radius: 2rem;
+      font-size: 16px;
+      font-weight: 700;
+      border: none;
+      position: relative;
+      bottom: -13rem;
+      width: 17rem;
+      height: 3rem;
+    }
+}
