--- a/src/components/HomePage/Main/DetailedProductCard/ModalForComment/styles.module.scss
+++ b/src/components/HomePage/Main/DetailedProductCard/ModalForComment/styles.module.scss
@@ -48,4 +48,11 @@
       width: 17rem;
       height: 3rem;
     }
+
+    label{
+      font-size: 2rem;
+      position: relative;
+      top: 11rem;
+      color: white;
+    }
 }
