--- a/src/components/HomePage/Main/DetailedProductCard/styles.module.scss
+++ b/src/components/HomePage/Main/DetailedProductCard/styles.module.scss
@@ -2,6 +2,7 @@
   width: 18rem;
   border: 0.1rem solid #fff;
   margin: 0.7rem 0 0 10rem;
+  height: 30rem;
   &:hover {
     border: 0.1rem solid #f9e100c7;
     outline: 0;
@@ -21,7 +22,7 @@
   font-weight: 700;
   border: none;
   position: absolute;
-  bottom: 1rem;
+  // bottom: 1rem;
   left: 0.2rem;
   width: 17rem;
   &:hover {
@@ -92,8 +93,8 @@
 
 .comments {
   position: relative;
-  top: 5rem;
-  left: 10rem;
+  top: -27rem;
+  left: 37rem;
   width: 36rem;
 
   span {
@@ -104,7 +105,7 @@
 
 .description {
   position: absolute;
-  top: 3rem;
+  top: 0rem;
   left: 20rem;
   min-width: 23rem;
   max-height: 15rem;
