--- a/src/components/HomePage/Main/styles.module.scss
+++ b/src/components/HomePage/Main/styles.module.scss
@@ -139,15 +139,14 @@
 }
 
 .addNewProductButton {
+  position: absolute;
+  right: 0.4rem;
   background-color: orange;
   color: black;
-  border-radius: 2rem;
-  font-size: 1.3rem;
-  font-weight: 700;
-  border: none;
-  position: fixed;
-  bottom: 14rem;
-  right: 1.2rem;
+  border-radius: 1rem;
+  font-size: 1rem;
+  font-weight: 600;
+  border: #fff 0.1rem solid;
   width: 8%;
 
   &:hover {
@@ -160,7 +159,6 @@
 .filtrButtons {
   display: flex;
   position: relative;
-  left: 37%;
   top: 0.5rem;
 
   button {
@@ -169,8 +167,13 @@
     border-radius: 1rem;
     font-size: 1rem;
     font-weight: 600;
-    border: none;
+    border: #fff 0.1rem solid;
     width: 8%;
-    margin-left: 0.5rem;
+    margin-right: 0.5rem;
+    &:hover {
+      transition: none;
+      border: 0.1rem solid black;
+      background-color: #f9e100c7;
+    }
   }
 }
