--- a/src/components/HomePage/Footer/Style.module.scss
+++ b/src/components/HomePage/Footer/Style.module.scss
@@ -3,6 +3,8 @@ footer {
   display: flex;
   justify-content: space-around;
   padding: 31px;
+  position: relative;
+  bottom: -10rem;
 }
 
 .footerLogo {
