--- a/src/components/HomePage/Main/styles.module.scss
+++ b/src/components/HomePage/Main/styles.module.scss
@@ -139,15 +139,16 @@
 }
 
 .addNewProductButton {
-  position: absolute;
-  right: 0.4rem;
+  position: fixed;
+  right: 0.5rem;
+  bottom: 2rem;
   background-color: orange;
   color: black;
   border-radius: 1rem;
-  font-size: 1rem;
+  font-size: 3rem;
   font-weight: 600;
   border: #fff 0.1rem solid;
-  width: 8%;
+  display: flex;
 
   &:hover {
     transition: none;
@@ -160,16 +161,22 @@
   display: flex;
   position: relative;
   top: 0.5rem;
+  background-color: orange;
+  justify-content: space-around;
+  margin: -8px 0 0 0;
+  padding: 0 0 0 3rem;
 
-  button {
-    background-color: orange;
+  div {
     color: black;
     border-radius: 1rem;
     font-size: 1rem;
     font-weight: 600;
-    border: #fff 0.1rem solid;
-    width: 8%;
+    border: orange 0.1rem solid;
+    width: 20%;
+    height: 2.5rem;
     margin-right: 0.5rem;
+    text-align: center;
+    padding: 0.3rem;
     &:hover {
       transition: none;
       border: 0.1rem solid black;
