--- a/src/components/LikedProducts/styles.module.scss
+++ b/src/components/LikedProducts/styles.module.scss
@@ -1,3 +1,23 @@
 h2 {
   margin-left: 2rem;
 }
+
+.basketIsEmpty {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+.btnBackToHome {
+  display: flex;
+  justify-content: center;
+  margin: 0.2rem;
+  flex-direction: row;
+  background-color: rgba(249, 225, 0, 0.7803921569);
+  color: black;
+  border-radius: 2rem;
+  font-size: 16px;
+  font-weight: 700;
+  border: none;
+}
